<resources>
    <string name="app_name">MovieApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular_films">Popular Films</string>
    <string name="popular_series">Popular Series</string>
    <string name="search">Search</string>
    <string name="query">Query</string>
    <string name="description">Description</string>
    <string name="actors">Actors</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="unknown_host_exception">Unable to connect to the Internet</string>
    <string name="connect_exception">Unable to connect to the moviedb.org</string>
    <string name="socket_timeout_exception">Failed to connect to the moviedb.org</string>
    <string name="http_exception">Incorrect login or password</string>
    <string name="login">Login</string>
    <string name="authorization">Authorization</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="favorite">Favorite</string>
    <string name="log_out">Log out</string>
    <string name="sign_in">Sign In</string>
</resources>