<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.user.UserFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/authorization"
                    android:textSize="20sp"
                    android:padding="6dp"
                    android:textColor="?attr/mainTextColor"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/et_login"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:padding="6dp"
                    android:textColor="?attr/mainTextColor"
                    android:hint="@string/login"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:inputType="textShortMessage"
                    />
                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:padding="6dp"
                    android:textColor="?attr/mainTextColor"
                    android:hint="@string/password"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:inputType="textPassword"
                    />

                <Button
                    android:id="@+id/btn_log_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:padding="6dp"
                    android:textColorHint="@color/white"
                    android:hint="@string/log_in"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite"
                    android:textSize="20sp"
                    android:padding="6dp"
                    android:textColor="?attr/mainTextColor"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movies"
                    android:textSize="16sp"
                    android:padding="6dp"
                    android:textColor="?attr/secondaryTextColor"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_favorite_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_poster"
                    tools:itemCount="9"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/series"
                    android:textSize="16sp"
                    android:padding="6dp"
                    android:textColor="?attr/secondaryTextColor"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_favorite_series"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_poster"
                    tools:itemCount="9"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>