<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:elevation="12dp"
                app:cardCornerRadius="60dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9">

                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:id="@+id/img_avatar"
                    tools:src="@drawable/no_image_sample"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true">
                </ImageView>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Login"
                android:textSize="20sp"
                android:padding="6dp"
                android:textColor="?attr/mainTextColor"
                android:textStyle="bold"
                android:textAlignment="center"
                android:maxLines="1"/>

            <Button
                android:id="@+id/btn_log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/log_out"
                android:padding="6dp"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite"
                    android:textSize="20sp"
                    android:padding="6dp"
                    android:textColor="?attr/mainTextColor"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movies"
                    android:textSize="16sp"
                    android:padding="6dp"
                    android:textColor="?attr/secondaryTextColor"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="190dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_favorite_movies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:orientation="horizontal"
                        tools:listitem="@layout/item_poster"
                        tools:itemCount="9"
                        android:layout_gravity="center"/>

                    <TextView
                        android:visibility="invisible"
                        android:id="@+id/tv_error_movies"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:padding="6dp"
                        android:textColor="?attr/secondaryTextColor"
                        android:gravity="center"/>

                    <ProgressBar
                        android:visibility="invisible"
                        android:id="@+id/progress_bar_movies"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleX="0.5"
                        android:scaleY="0.5"/>
                </FrameLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/series"
                    android:textSize="16sp"
                    android:padding="6dp"
                    android:textColor="?attr/secondaryTextColor"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="190dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_favorite_series"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:orientation="horizontal"
                        tools:listitem="@layout/item_poster"
                        tools:itemCount="9"
                        android:layout_gravity="center"/>

                    <TextView
                        android:visibility="invisible"
                        android:id="@+id/tv_error_series"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:padding="6dp"
                        android:textColor="?attr/secondaryTextColor"
                        android:gravity="center"/>

                    <ProgressBar
                        android:visibility="invisible"
                        android:id="@+id/progress_bar_series"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleX="0.5"
                        android:scaleY="0.5"/>
                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>